DQN: Update code

--- a/lec8_dqn/DQN_inclass.ipynb
+++ b/lec8_dqn/DQN_inclass.ipynb
@@ -68,8 +68,8 @@
     "action_size = env.action_space.n\n",
     "agent = DQN_Agent(state_size, action_size)\n",
     "\n",
-    "episodes = 10\n",
-    "batch_size = 8\n",
+    "episodes = 50\n",
+    "batch_size = 64\n",
     "skip_start = 90  # Breakout-v0 waits for 90 actions before the episode begins\n",
     "total_time = 0   # Counter for total number of steps taken\n",
     "all_rewards = 0  # Used to compute avg reward over time\n",
@@ -105,7 +105,7 @@
     "        \n",
     "        # Every update_rate timesteps we update the target network parameters\n",
     "        if total_time % agent.update_rate == 0:\n",
-    "            # TODO: change \n",
+    "            # TODO: Update the target model by copying weights from Qnetwork\n",
     "            agent.update_target_model()\n",
     "        \n",
     "        # Return the avg of the last 4 frames\n",
