Add saving model

--- a/lec8_dqn/DQN_inclass.ipynb
+++ b/lec8_dqn/DQN_inclass.ipynb
@@ -131,7 +131,10 @@
     "\n",
     "    if len(agent.memory) > batch_size:\n",
     "        # TODO train\n",
-    "        pass"
+    "        pass\n",
+    "\n",
+    "    # TODO: Save model every n (try 10 or 25) episodes\n",
+    "\n"
    ]
   },
   {
@@ -142,7 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "agent.save('models/5k-memory_100-games')"
+    "# agent.save('models/5k-memory_100-games')"
    ]
   },
   {
